swapped out base64 methods